# iGnition

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  iGnition.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/screenshots/: .gitkeep
installer/: iGnition.iss
scripts/: build.ps1  run.ps1  setup.ps1
src/ignition/: __main__.py  app.py
src/ignition/core/: app_launcher.py  config_store.py  ignition_controller.py  iracing_monitor.py  logging_setup.py  models.py  paths.py  process_killer.py  process_utils.py  single_instance.py  state.py  storage.py  windows_autostart.py
src/ignition/gui/: bootstrap.py  tray.py
src/ignition/gui/assets/: app.js  index.html  style.css
src/ignition/gui/web/: api.py  runner.py
tests/: test_config_store.py  test_models.py  test_storage.py
